--- a/VlonexJumpOTT.html
+++ b/VlonexJumpOTT.html
@@ -277,7 +277,7 @@ const CONFIG = {
 
 // --- АУДИО СИСТЕМА ---
 const audioFiles = {
-    jump: 'jump.ogg',       // Обычный прыжок
+    jump: 'jump.mp3',       // Обычный прыжок
     break: 'break.ogg',     // Ломается платформа
     mom: 'mom.ogg',         // Сирена
     ott: 'ott.ogg',         // OTT звук
