--- a/VlonexJumpOTT.html
+++ b/VlonexJumpOTT.html
@@ -278,15 +278,15 @@ const CONFIG = {
 // --- АУДИО СИСТЕМА ---
 const audioFiles = {
     jump: 'jump.mp3',       // Обычный прыжок
-    break: 'break.ogg',     // Ломается платформа
-    mom: 'mom.ogg',         // Сирена
-    ott: 'ott.ogg',         // OTT звук
-    bass: 'bass.ogg',       // Обычная ракета
-    clap: 'clap.ogg',       // Подбор клэпа
-    slow: 'slow.ogg',       // Масло
-    sound: 'sound.ogg',     // Саундгудайзер
-    fall: 'fall.ogg',       // Смерть от падения
-    win: 'win.ogg'          // Смерть от мамаши (типа победа мамаши)
+    break: 'break.mp3',     // Ломается платформа
+    mom: 'mom.mp3',         // Сирена
+    ott: 'ott.mp3',         // OTT звук
+    bass: 'bass.mp3',       // Обычная ракета
+    clap: 'clap.mp3',       // Подбор клэпа
+    slow: 'butter.mp3',       // Масло
+    sound: 'sound.mp3',     // Саундгудайзер
+    fall: 'fall.mp3',       // Смерть от падения
+    win: 'win.mp3'          // Смерть от мамаши (типа победа мамаши)
 };
 
 const sounds = {};
