--- a/VlonexJump.html
+++ b/VlonexJump.html
@@ -181,14 +181,14 @@ const CONFIG = {
     difficultyScale: 20000,
 
     // --- Бонусы (Шансы: 1 к X) ---
-    chanceButter: 50,
+    chanceButter: 25,
     chanceClap: 30,
-    chanceSoundgoodizer: 70,
-    chanceBass: 100,   
-    chanceOTT: 300,    
+    chanceSoundgoodizer: 35,
+    chanceBass: 50,   
+    chanceOTT: 150,    
     
     // --- Мамаша ---
-    momAttackChance: 200,
+    momAttackChance: 100,
     momProjectileSpeed: 2.5,
     momProjectileColor: "#7a5901",
     momProjectileSize: 40,
@@ -211,7 +211,7 @@ const CONFIG = {
         ],
         // БОНУСЫ (Название фиксировано, описание меняется)
         butterSub: [
-            "Вязко, как у бати в гараже",
+            "Мафляное",
             "Сливочное, 82.5%",
             "Физика вышла покурить",
             "Интернет лагает? А, не...",
@@ -222,7 +222,7 @@ const CONFIG = {
             "+3 Прыжка (легально)",
             "Руки вверх!",
             "Спасай свою шкуру",
-            "Хлопай ресницами и взлетай"
+            "Аплодисменты автору!"
         ],
         soundSub: [
             "Делаем жир, убираем брак",
@@ -234,14 +234,14 @@ const CONFIG = {
         bassSub: [
             "Подброс от Рокетмана",
             "Сабвуфер в багажнике",
-            "Низко пошел, к дождю",
+            "Высоко полетел, к дождю",
             "Осторожно, горячо",
             "Эконом-класс авиалиний"
         ],
         ottSub: [
             "ПЕРЕЖАТО В ХЛАМИНУ",
             "УШИ В КРОВЬ, ПОЛЕТ НОРМАЛЬНЫЙ",
-            "Илон Маск просил вернуть ракету",
+            "ИЛОН МАСК ПРОСИТ ВЕРНУТЬ РАКЕТУ",
             "КРАСНАЯ КОЛБАСКА",
             "ЖИРНЮЩИЙ БУСТ"
         ],
@@ -252,32 +252,32 @@ const CONFIG = {
             { t: "Гравитация бессердечна", s: "Ньютон тебя переиграл и уничтожил." },
             { t: "Потрачено.", s: "Даже моя бабка лучше прыгает." },
             { t: "Земля тебе пухом", s: "Влонекф стал лепёшкой. R.I.P." },
-            { t: "Неудачное приземление", s: "Соберись уже, ну!" }
+            { t: "Неудачное приземление", s: "Соберись, тряпка!" }
         ],
         
         // ГЕЙМОВЕРЫ - МАМАША (Специфические)
         deathMom: [
             { t: "Влонекф не вынес дипломатической мощи", s: "После этого он вознёсся в садовое товарищество", epic: ", , М о с с а д , ," },
             { t: "Председатель СНТ вынес приговор", s: "Ты исключен из дачного кооператива. Посмертно.", epic: ", , М о с с а д , ," },
-            { t: "АННИГИЛИРОВАН ВЕСОМ", s: "Слишком много авторитета в одном снаряде.", epic: "" },
-            { t: "ЖИРНАЯ АТАКА ПРОШЛА УСПЕШНО", s: "Влонекф не смог увернуться от фактов.", epic: "" },
-            { t: "Влонекф не вывез базара", s: "Атака сверху оказалась слишком эффективной.", epic: "" }
+            { t: "АННИГИЛИРОВАН ВЕСОМ", s: "Слишком много авторитета в одном снаряде.", epic: ", , У в ы , ," },
+            { t: "ЖИРНАЯ АТАКА ПРОШЛА УСПЕШНО", s: "Влонекф не смог увернуться от фактов.", epic: ", , Ж а л ь , ," },
+            { t: "Влонекф не вывез базара", s: "Атака сверху оказалась слишком эффективной.", epic: ", , Л о х , ," }
         ]
     }
 };
 
 // --- АУДИО СИСТЕМА ---
 const audioFiles = {
-    jump: 'jump.ogg',
-    break: 'break.ogg',
-    mom: 'mom.ogg',
-    ott: 'ott.ogg',
-    bass: 'bass.ogg',
-    clap: 'clap.ogg',
-    slow: 'slow.ogg',
-    sound: 'sound.ogg',
-    fall: 'fall.ogg',
-    win: 'win.ogg'
+    jump: 'jump.mp3',
+    break: 'break.mp3',
+    mom: 'mom.mp3',
+    ott: 'ott.mp3',
+    bass: 'bass.mp3',
+    clap: 'clap.mp3',
+    slow: 'slow.mp3',
+    sound: 'sound.mp3',
+    fall: 'fall.mp3',
+    win: 'win.mp3'
 };
 
 const sounds = {};
