--- a/VlonexJump.html
+++ b/VlonexJump.html
@@ -274,7 +274,7 @@ const audioFiles = {
     ott: 'ott.mp3',
     bass: 'bass.mp3',
     clap: 'clap.mp3',
-    slow: 'slow.mp3',
+    slow: 'butter.mp3',
     sound: 'sound.mp3',
     fall: 'fall.mp3',
     win: 'win.mp3'
